[tool.poetry]
name = "buri"
version = "0.1.0"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
sienna = "^0.1.5"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
ipython = "^8.8.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
